JWT Tokens are now stored in cookies to ease the front end auth process
